refactor: remove patches for lunatic missing block